[gd_scene load_steps=7 format=2]

[ext_resource path="res://Player/PlayerController.gd" type="Script" id=1]
[ext_resource path="res://Player/Knife.tscn" type="PackedScene" id=2]

[sub_resource type="CapsuleShape" id=1]

[sub_resource type="CapsuleMesh" id=2]

[sub_resource type="SpatialMaterial" id=3]
albedo_color = Color( 0, 0, 0, 1 )

[sub_resource type="Animation" id=4]
resource_name = "KnifeAttack"

[node name="Player" type="KinematicBody"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1.90036, 0 )
script = ExtResource( 1 )

[node name="Body" type="CollisionShape" parent="."]
transform = Transform( 1, 0, 0, 0, -1.62921e-07, -1, 0, 1, -1.62921e-07, 0, 0, 0 )
shape = SubResource( 1 )

[node name="Head" type="Spatial" parent="."]

[node name="Camera" type="Camera" parent="Head"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.712, 0 )
fov = 90.0
near = 0.06
far = 300.0

[node name="Knife" parent="Head/Camera" instance=ExtResource( 2 )]
transform = Transform( 0.090975, -0.0777043, -0.00925126, 0.0781011, 0.0892781, 0.018156, -0.00487388, -0.0197857, 0.118257, 1.4733, -0.390967, -1.24398 )

[node name="BodyMesh" type="MeshInstance" parent="."]
transform = Transform( 1, 0, 0, 0, -4.37114e-08, -1, 0, 1, -4.37114e-08, 0, 0, 0 )
mesh = SubResource( 2 )
material/0 = SubResource( 3 )

[node name="RayCastLeft" type="RayCast" parent="."]
enabled = true
cast_to = Vector3( -1.1, 0, 0 )

[node name="RayCastRight" type="RayCast" parent="."]
enabled = true
cast_to = Vector3( 1.1, 0, 0 )

[node name="JumpTimer" type="Timer" parent="."]

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/KnifeAttack = SubResource( 4 )
[connection signal="timeout" from="JumpTimer" to="." method="_on_JumpTimer_timeout"]
